# LocalRouter

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  Dockerfile  Dockerfile.builder  Dockerfile.vllm  README.md  endpoint_proxy.py  launch.sh  launch_vllm.sh  pyproject.toml  recipes.toml  smoke.sh  usage_tracker.py  vast_down.sh  vast_manager.py  vast_manager_original.py  vast_up.sh
.github/workflows/: build.yml
.hermes/plans/: 2026-04-30-manager-flexibility.md
docs/: SKILL.md
localrouter/: __init__.py  __main__.py  config.py  cost.py  helpers.py  hf_browser.py  local_endpoint.py  providers.py  proxy.py  recipe_editor.py  vast_ops.py
localrouter/menus/: __init__.py  editor_menus.py  local_menus.py  main.py  provider_menus.py  tool_menus.py  vast_menus.py
tools/: vast_tunnel.sh
